--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,10 @@ npm-debug.log
 npm-debug.log*
 
 # dotenv environment variables file
-/src/configs/*
-.env
-.env*
+
+# /src/configs/*
+# .env
+# .env*
 
 .cache/
 **/.cache/
